tests/snapshots/crawler__parse_bullets.snap
---
source: tests/crawler.rs
expression: section
---
[
  Section(
    name: "Terms",
    questions: [
      Question(
        id: "[id]",
        data: Bullet(Bullet(
          body: "Here is some short, relevant fact regarding this subtopic.",
        )),
        comp_level: Trimmed,
        mastery: 0,
        correct: 0,
        seen: 0,
        hints: 0,
        last_correct: "[last_correct]",
      ),
      Question(
        id: "[id]",
        data: Bullet(Bullet(
          body: "And another one! Only use these when there is no better option.",
        )),
        comp_level: Trimmed,
        mastery: 0,
        correct: 0,
        seen: 0,
        hints: 0,
        last_correct: "[last_correct]",
      ),
      Question(
        id: "[id]",
        data: Bullet(Bullet(
          body: "Definitions and processes have their own structures.",
        )),
        comp_level: Trimmed,
        mastery: 0,
        correct: 0,
        seen: 0,
        hints: 0,
        last_correct: "[last_correct]",
      ),
    ],
    children: [],
  ),
]
