tests/snapshots/crawler__parse_terms.snap
---
source: tests/crawler.rs
expression: cards
---
[
  Section(
    name: "Terms",
    questions: [
      Question(
        id: "[id]",
        data: Term(Term(
          term: "der / die Lehrer(in)",
          definition: "teacher",
          inverted: false,
        )),
        comp_level: Trimmed,
        mastery: 0,
        correct: 0,
        seen: 0,
        last_correct: "[last_correct]",
      ),
      Question(
        id: "[id]",
        data: Term(Term(
          term: "wissen / weiß / hat gewusst",
          definition: "to know",
          inverted: false,
        )),
        comp_level: Trimmed,
        mastery: 0,
        correct: 0,
        seen: 0,
        last_correct: "[last_correct]",
      ),
      Question(
        id: "[id]",
        data: Term(Term(
          term: "in der Zwischenzeit",
          definition: "[in the] meantime",
          inverted: false,
        )),
        comp_level: Trimmed,
        mastery: 0,
        correct: 0,
        seen: 0,
        last_correct: "[last_correct]",
      ),
    ],
    children: [],
  ),
]
